--- a/index.html
+++ b/index.html
@@ -41,9 +41,19 @@
                 <div class="about-container">
                     <div class="about-text">
                         <h3>Carlo Ancelotti 🏆</h3>
-                        <p class="intro">Hello! I'm Carlo Ancelotti, one of football's most successful managers. With a career spanning over four decades, I've had the privilege of managing some of the world's greatest clubs and working with exceptional players.</p>
+                        <p class="intro">Hello! I'm Carlo Ancelotti, one of football's most successful managers. Born in Reggiolo, Italy, on June 10, 1959, I've had the privilege of managing some of the world's greatest clubs and working with exceptional players throughout my career.</p>
+                        
+                        <div class="personal-info">
+                            <h4>Personal Life</h4>
+                            <p>I come from a family with deep roots in farming and a passion for football. My father Giuseppe was a farmer and also managed the local church's football team, where my love for the sport began. I'm married to Mariann Barrena McClay, and I have two children from my previous marriage:</p>
+                            <ul class="family-list">
+                                <li>Davide Ancelotti - My son who follows in my footsteps as a football coach and is currently my assistant at Real Madrid</li>
+                                <li>Katia Ancelotti - My daughter who has always been supportive of my career</li>
+                            </ul>
+                        </div>
+
                         <div class="achievements">
-                            <h4>My Achievements Include:</h4>
+                            <h4>Professional Achievements</h4>
                             <ul>
                                 <li>4 UEFA Champions League titles as a manager</li>
                                 <li>League titles in 5 different countries</li>
@@ -51,7 +61,18 @@
                                 <li>Known for my calm demeanor and tactical flexibility</li>
                             </ul>
                         </div>
-                        <p class="current-role">Currently, I'm the head coach of Real Madrid, where I continue to pursue excellence in football while maintaining my philosophy of respect, hard work, and tactical innovation.</p>
+
+                        <div class="fun-facts">
+                            <h4>Fun Facts</h4>
+                            <ul>
+                                <li>Nicknamed "Don Carlo" and "Carletto" by fans and players</li>
+                                <li>Known for my famous raised eyebrow expression</li>
+                                <li>Passionate about Italian cuisine and enjoy cooking</li>
+                                <li>Fluent in multiple languages including Italian, English, Spanish, and French</li>
+                            </ul>
+                        </div>
+                        
+                        <p class="current-role">Currently, I'm the head coach of Real Madrid, where I continue to pursue excellence in football while maintaining my philosophy of respect, hard work, and tactical innovation. My approach to management is based on building strong relationships with players and creating a positive team environment.</p>
                     </div>
                 </div>
             </div>
